--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/world-db
+spring.datasource.username=world
+spring.datasource.password=world123
