--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/world-db
 spring.datasource.username=world
 spring.datasource.password=world123
+spring.datasource.driver-class-name=org.postgresql.Driver
